--- a/Students/sharapov2701/project/src/layout/styles/style.css
+++ b/Students/sharapov2701/project/src/layout/styles/style.css
@@ -184,3 +184,20 @@ img {
 .d-block {
     display: block
 }
+
+img {
+    width: auto;
+    height: auto;
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.img-catalog {
+    width: 300px;
+    height: 200px;
+}
+
+.img-cart {
+    height: 100px;
+    width: 100px;
+}
